--- a/index.html
+++ b/index.html
@@ -139,7 +139,6 @@
             <div>
               <h4 class="title">Frontend Development:</h4>
               <p class="description"> Building responsive, user-friendly interfaces using modern frameworks like React, HTML5, and CSS3.</p>
-              <a href="service-details.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
           <!-- End Service Item -->
@@ -149,7 +148,6 @@
             <div>
               <h4 class="title">Backend Development:</h4>
               <p class="description">Creating scalable server-side applications using Node.js, Express, and Python with databases like MongoDB and SQL.</p>
-              <a href="service-details.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -158,7 +156,6 @@
             <div>
               <h4 class="title">API Development & Integration:</h4>
               <p class="description">Designing RESTful APIs to connect your frontend with the backend and external services.</p>
-              <a href="service-details.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -167,7 +164,6 @@
             <div>
               <h4 class="title">Database Management:</h4>
               <p class="description"> Working with both NoSQL (MongoDB) and SQL databases to store and manage data securely.</p>
-              <a href="service-details.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -176,7 +172,6 @@
             <div>
               <h4 class="title">Maintenance & Support:</h4>
               <p class="description">Providing ongoing support, bug fixes, and enhancements to keep your application running smoothly.</p>
-              <a href="service-details.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
         </div>
@@ -191,7 +186,7 @@
           <h2>Projects</h2>
           <div class="project-list">
             <div class="project">
-              <h3><a href="" target="_blank">E-commerce Website</a></h3>
+              <h3><a href="https://reecowearclothing.netlify.app" target="_blank">E-commerce Website</a></h3>
               <p>Developed a fully functional e-commerce platform with product listing, shopping cart, and checkout
                  features. Integrated with payment systems and optimized for user experience.</p>
             </div>
