--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
           
         
 
-          <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="300">
+          <form action="https://formspree.io/f/xjkvojkb" method="post">
             <div class="row gy-4">
 
               <div class="col-md-6">
